# erc20_wip

./: .gitignore  Cargo.toml  Makefile
contract-tests/: Cargo.toml
contract-tests/src/: erc20.rs  lib.rs  tests.rs
contract-tests/tests/: integration.rs
contract-tests/wasm/: erc20.wasm
erc20/: Cargo.toml
erc20/src/: allowances.rs  balances.rs  constants.rs  detail.rs  entry_points.rs  internal.rs  lib.rs
