[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dependencies]
hex = "0.4.3"
blake2 = "0.9.2"

[dev-dependencies]
casper-types = { path = "/home/michal/Projects/casperlabs-node/types", features = ["std"] }
casper-engine-test-support = { path = "/home/michal/Projects/casperlabs-node/execution_engine_testing/test_support" }
