[package]
name = "erc20"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "erc20"
path = "src/bin/main.rs"
test = false

[dependencies]
casper-contract = "1.3.2"
# casper-contract = {path = "/home/michal/Projects/casperlabs-node/smart_contracts/contract", default-features=false}
casper-types = "1.3.2"
# casper-types = { path = "/home/michal/Projects/casperlabs-node/types", default-features=false }

hex = { version = "0.4.3", default-features = false }